# HackArena3.0-ApiWrapper-Cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: release-sdk.yml
cmake/: GenerateGrpcSources.cmake  PackageTemplateRelease.cmake  hackarena3Config.cmake.in
include/hackarena3/: client.hpp  config.hpp  errors.hpp  hackarena3.hpp  types.hpp
src/: auth.cpp  auth.hpp  client.cpp  config.cpp  game_token.cpp  game_token.hpp  runtime.cpp  runtime.hpp  runtime_common.cpp  runtime_common.hpp  runtime_convert.cpp  runtime_convert.hpp  runtime_discovery.cpp  runtime_discovery.hpp  runtime_loop.cpp  runtime_loop.hpp  runtime_race.cpp  runtime_race.hpp  types.cpp
src/detail/: constants.hpp  environment.cpp  environment.hpp  grpc_utils.hpp  path_utils.cpp  path_utils.hpp  process.cpp  process.hpp  string_utils.hpp
template/: CMakeLists.txt  README.md
template/system/: manifest.toml
template/user/src/bot/: main.cpp
